--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,8 @@ html {
     font-size: 20px;
     margin: 0;
     overflow-x: hidden;
+
+
     /* hace que no se desborde  en el eje x*/
 }
 
@@ -23,9 +25,10 @@ html {
 }
 
 .iconoLogo:hover {
-    animation: aumentar 5s forwards;
+    animation: aumentar 0.5s forwards;
     filter: drop-shadow(0 0 0.75rem #ffffff);
 }
+
 
 small {
     font-size: 50px;
@@ -96,6 +99,7 @@ header {
 }
 
 .bio>h2 {
+
     display: flex;
     position: absolute;
     font-family: 'Poppins', sans-serif;
@@ -108,6 +112,7 @@ header {
 }
 
 .proyectos {
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -116,6 +121,7 @@ header {
 }
 
 .about {
+
     display: flex;
     align-items: center;
     padding-top: 100px;
@@ -124,6 +130,7 @@ header {
 
 
 .lista-proyectos-container {
+
     display: flex;
     justify-content: center;
     /* Ajusta la alineación horizontal según tus necesidades */
@@ -136,6 +143,7 @@ header {
 }
 
 .lista-proyectos {
+
     position: relative;
     width: 250px;
     height: 250px;
@@ -163,6 +171,7 @@ header {
 }
 
 .lista-proyectos>p {
+
     padding-right: 20px;
     padding-left: 20px;
     position: absolute;
@@ -173,6 +182,7 @@ header {
 
 
 .img-Proj {
+
     position: relative;
     display: flex;
     width: 220px;
@@ -182,6 +192,7 @@ header {
 }
 
 .container-proyectos {
+
     display: block;
     justify-content: center;
     align-items: center;
@@ -243,20 +254,68 @@ span {
     margin-right: 5px;
     align-items: center;
     justify-content: center;
+    transition: transform 0.3s ease, text-shadow 0.5s ease;
 
 
 }
 
 .menu li :hover {
     border-radius: 10px;
-    /* animation: flotar 1.0s ; */
-    /* box-shadow: inset 0 0 10px #000000; */
-    animation: aumentar 1.5s forwards;
-    /* color: purple; */
-    text-shadow: 1px 1px 2px rgb(78, 0, 68),
-        0 0 1em rgb(77, 0, 77),
-        0 0 0.2em rgb(51, 0, 51);
+    animation: aumentar 0.5s forwards;
+    color: purple;
+}
 
+/* movimiento */
+
+.menu li:hover {
+
+    text-shadow: 1px 1px 2px rgb(78, 0, 68),
+        0 0 1em rgb(39, 0, 39),
+        0 0 0.2em rgb(129, 0, 129);
+    transform: scale(1.1);
+}
+
+
+.menu-responsive {
+    background-color: rgba(0,0,0, 0.95);
+    position:  absolute;
+    display: none;
+    width: 300px;
+    height: 100vb;
+    border-radius: 10px;
+    margin-top: -30px;
+    margin-left: -10px;
+    padding-top: 70px;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    box-shadow: -10px 0  10px rgb(0, 0, 0);
+    z-index: 999;
+
+}
+
+
+.menu-responsive li {
+    display: block;
+    width: 200px;
+    margin-left: 5px;
+    margin-right: 5px;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    color: rgb(252, 252, 252);
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+    cursor: pointer;
+    transition: 1.5s;
+
+}
+
+.menu-responsive li:hover {
+    animation: aumentar 0.5s forwards;
 }
 
 a {
@@ -767,31 +826,30 @@ h1 {
     border-radius: 15px;
 }
 
-nav {
-    position: relative;
-}
 
 
 
 /* Menu boton */
 
 .menu-toggle {
-    background-color: rgb(54, 0, 56);
-    position: relative;
+    background-color: rgb(123, 0, 128);
+    position: fixed;
     display: none;
     transition: 0.4s;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 8px 8px;
-    border-radius: 15px;
+    align-items: left;
+    justify-content: left;
+    flex-direction: center;
+    padding: 5px 5px;
+    border-radius: 8px;
     cursor: pointer;
+
+
 }
 
 .bar1 {
     border-radius: 30px;
-    background-color: rgb(0, 0, 0);
-    width: 50px;
+    background-color: rgb(255, 255, 255);
+    width: 40px;
     margin-bottom: 10px;
     transition: 0.4s;
     height: 5px;
@@ -799,8 +857,8 @@ nav {
 
 .bar2 {
     border-radius: 30px;
-    background-color: rgb(0, 0, 0);
-    width: 50px;
+    background-color: rgb(255, 255, 255);
+    width: 40px;
     position: absolute;
     transition: 0.4s;
     height: 5px;
@@ -808,41 +866,41 @@ nav {
 
 .bar3_h {
     border-radius: 30px;
-    background-color: rgb(0, 0, 0);
-    width: 50px;
+    background-color: rgb(255, 255, 255);
+    width: 40px;
     transition: 0.4s;
     height: 5px;
 }
 
 .bar4 {
-    border-radius: 30px;
-    background-color: rgb(0, 0, 0);
-    width: 50px;
+    border-radius: 40px;
+    background-color: rgb(255, 255, 255);
+    width: 40px;
     margin-top: 10px;
     transition: 0.4s;
     height: 5px;
 }
 
 
-.menu-toggle:hover {
+.menu-toggle.active {
     border-radius: 50px;
     cursor: pointer;
 }
 
-.menu-toggle:hover .bar3_h {
+.menu-toggle.active .bar3_h {
     transform: rotate(-45deg);
 }
 
-.menu-toggle:hover .bar2 {
+.menu-toggle.active .bar2 {
     transform: rotate(45deg);
 }
 
-.menu-toggle:hover .bar1 {
+.menu-toggle.active .bar1 {
     opacity: 0;
     width: 30px;
 }
 
-.menu-toggle:hover .bar4 {
+.menu-toggle.active .bar4 {
     opacity: 0;
     width: 30px;
 }
@@ -909,14 +967,8 @@ footer {
 
 }
 
-/* .form-contacto input {
-    margin: 10px;
-    padding: 10px;
-    border-radius: 10px;
-    border: solid 3px #61003f;
-} */
 
-.form-contacto input{
+.form-contacto input {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -925,6 +977,7 @@ footer {
     font-size: 16px;
     border-radius: 4px;
 }
+
 .form-contacto textarea {
     margin: 10px;
     padding: 10px;
@@ -936,7 +989,7 @@ footer {
 
 
 .form-contacto label {
- 
+
     top: -10px;
     left: 10px;
     color: white;
@@ -981,30 +1034,37 @@ footer {
 /*Responsive mobile */
 /* Menu Responsive Mobile*/
 @media screen and (max-width: 768px) {
+
     .menu {
         display: none;
         flex-direction: column;
-    }
-
-    .menu-toggle {
-        display: flex;
+        align-items: center;
+        margin-left: 0px;
+        padding: 10px;
+        background-color: black;
     }
 
     .iconoLogo {
-        margin-left: 40px;
+        display: none;
     }
 
-    ul {
-        display: flex;
-        flex-direction: column;
+    .menu-toggle {
+        display: block;
+        position: fixed;
+        top: 10px;
+        z-index: 1000;
+
+
     }
+
+
+
 }
 
 /* Fin Menu Responsive Mobile*/
 
 /* About me Responsive  */
 @media screen and (max-width: 780px) {
-
     body {
         margin: 0 auto;
     }
@@ -1118,7 +1178,6 @@ footer {
         margin-bottom: 50px;
     }
 
-
     /*tools container*/
 
     .contenedor-tools {
@@ -1138,6 +1197,7 @@ footer {
     }
 
     /* footers*/
+
 
 
 
