--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 body,
 html {
-    font-family: 'Poppins', sans-serif;
+
     background: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     font-size: 20px;
@@ -11,6 +11,12 @@ html {
     /* hace que no se desborde  en el eje x*/
 }
 
+*{
+    font-family: cursive;
+}
+img{
+    cursor: pointer;
+}
 .iconoLogo {
     position: absolute;
     width: 50px;
@@ -67,6 +73,7 @@ header {
 
 .dark-icon :hover {
     animation: aumentar 0.2s forwards;
+    cursor: pointer;
 
 }
 
@@ -102,7 +109,7 @@ header {
 
     display: flex;
     position: absolute;
-    font-family: 'Poppins', sans-serif;
+  font-family: cursive;
     font-size: 20px;
     margin-top: 100px;
     margin-right: 500px;
@@ -277,8 +284,8 @@ span {
 
 
 .menu-responsive {
-    background-color: rgba(0,0,0, 0.95);
-    position:  absolute;
+    background-color: rgba(0, 0, 0, 0.95);
+    position: absolute;
     display: none;
     width: 300px;
     height: 100vb;
@@ -288,7 +295,7 @@ span {
     padding-top: 70px;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    box-shadow: -10px 0  10px rgb(0, 0, 0);
+    box-shadow: -10px 0 10px rgb(0, 0, 0);
     z-index: 999;
 
 }
@@ -519,16 +526,7 @@ h1 {
 
 }
 
-.img-redes {
-    width: 40px;
-    height: 40px;
-    padding: 5px;
 
-}
-
-.img-redes:hover {
-    animation: aumentar 0.3s forwards;
-}
 
 .dark-icon img {
     position: absolute;
@@ -852,7 +850,7 @@ h1 {
     width: 40px;
     margin-bottom: 10px;
     transition: 0.4s;
-    height: 5px;
+    height: 4px;
 }
 
 .bar2 {
@@ -861,7 +859,7 @@ h1 {
     width: 40px;
     position: absolute;
     transition: 0.4s;
-    height: 5px;
+    height: 4px;
 }
 
 .bar3_h {
@@ -869,7 +867,7 @@ h1 {
     background-color: rgb(255, 255, 255);
     width: 40px;
     transition: 0.4s;
-    height: 5px;
+    height: 4px;
 }
 
 .bar4 {
@@ -878,7 +876,7 @@ h1 {
     width: 40px;
     margin-top: 10px;
     transition: 0.4s;
-    height: 5px;
+    height: 4px;
 }
 
 
@@ -925,7 +923,17 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-top: -40px;
 
+}
+
+.img-redes {
+    width: 45px;
+    height: 45px;
+}
+
+.img-redes:hover {
+    animation: aumentar 0.3s forwards;
 }
 
 .lista-redes ul {
@@ -952,6 +960,7 @@ footer {
     justify-content: center;
     flex-direction: column;
     margin-top: 100px;
+    margin-bottom: 0px;
 }
 
 .form-contacto {
@@ -959,6 +968,7 @@ footer {
     flex-direction: column;
     margin: 0 auto;
     width: 400px;
+    margin-bottom: 10px;
 
 }
 
@@ -967,8 +977,14 @@ footer {
 
 }
 
+.footer-contacto>h1 {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
 
 .form-contacto input {
+
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -976,38 +992,31 @@ footer {
     color: white;
     font-size: 16px;
     border-radius: 4px;
+    margin-top: 10px;
+    font-family: cursive;
 }
 
 .form-contacto textarea {
-    margin: 10px;
+    width: 100%;
     padding: 10px;
-    border-radius: 10px;
-    border: solid 3px #61003f;
-}
-
-
-
-
-.form-contacto label {
-
-    top: -10px;
-    left: 10px;
+    border: 1px solid #ccc;
+    background-color: transparent;
+    font-family: cursive;
     color: white;
-    padding: 0 5px;
-    font-size: 14px;
-    font-weight: bold;
-    z-index: 2;
-
-
+    font-size: 16px;
+    border-radius: 4px;
+    margin-top: 10px;
 }
 
-.btn-footer-send {
+.form-contacto button {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
     margin-top: 20px;
     padding: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
     border-radius: 10px;
     background-color: #000000;
     color: white;
@@ -1092,11 +1101,12 @@ footer {
     .bio>h2 {
         margin-right: 0px;
         font-size: 18px;
-        width: 400px;
+        width: 300px;
         margin-top: 370px
     }
 
     .profile {
+
         display: flex;
         flex-direction: column;
         margin: 0 auto;
@@ -1105,11 +1115,11 @@ footer {
 
     /*Project */
     .proyectos {
+
         display: flex;
         flex-direction: column;
         margin-top: 200px;
         margin-bottom: 100px;
-
 
     }
 
