--- a/styles/project.css
+++ b/styles/project.css
@@ -1,12 +1,13 @@
+body {
+    background-color: #16161d;
+    color: #ffffff
+}
 
-body{
-   background-color: #16161d;
-   color:#ffffff    
-}.proyectos {
+.proyectos {
     display: flex;
     margin-top: 10px;
     margin-bottom: 100px;
-    flex-wrap: wrap ;
+    flex-wrap: wrap;
     margin-left: 30px;
 }
 
@@ -26,7 +27,7 @@ body{
     height: 450px;
     width: 300px;
     border-radius: 20px;
-    box-shadow: 0px 0px 18px 2px  rgb(27, 0, 35);
+    box-shadow: 0px 0px 18px 2px rgb(27, 0, 35);
     background-color: #151515;
     margin: 10px 10px 10px 10px;
 }
@@ -70,6 +71,7 @@ body{
     border: solid 3px #000000;
     transition: 1s;
 }
+
 /* 
 p {
     font-family: 'Courier New', Courier, monospace;
@@ -79,7 +81,7 @@ p {
 } */
 
 .lista-proyectos>h2 {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: cursive;
     font-size: 20px;
     text-align: center;
     font-weight: bold;
@@ -88,7 +90,7 @@ p {
 h1 {
     font-family: 'Courier New', Courier, monospace;
     font-size: 30px;
-text-align: center;
+    text-align: center;
     font-weight: bold;
 }
 
