--- a/styles/index.css
+++ b/styles/index.css
@@ -12,7 +12,7 @@ html {
 }
 
 * {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 
 }
 
