--- a/styles/index.css
+++ b/styles/index.css
@@ -12,7 +12,7 @@ html {
 }
 
 * {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: Cascadia Code, Fira Code, Consolas, monospace;
 }
 
 img {
@@ -28,7 +28,7 @@ img {
     color: white;
     top: -15px;
     left: 20px;
-    font-family: Montserrat, sans-serif;
+    font-family: Cascadia Code, Fira Code, Consolas, monospace;
     font-weight: 700px;
 }
 
@@ -98,7 +98,7 @@ header {
 
 .bio>h1 {
     display: flex;
-    font-family: 'Poppins', sans-serif;
+    font-family: Cascadia Code, Fira Code, Consolas, monospace;
     font-size: 50px;
     font-weight: bold;
     margin-left: 20px;
@@ -111,7 +111,7 @@ header {
 
     display: flex;
     position: absolute;
-    font-family: 'Poppins', sans-serif, ;
+    font-family:Cascadia Code, Fira Code, Consolas, monospace;
     font-size: 20px;
     margin-top: 100px;
     margin-right: 500px;
@@ -174,7 +174,7 @@ header {
 }
 
 .lista-proyectos>h2 {
-    font-family: 'Poppins', sans-serif;
+    font-family: Cascadia Code, Fira Code, Consolas, monospace;
     font-size: 20px;
     text-align: center;
     font-weight: bold;
@@ -185,7 +185,7 @@ header {
     padding-right: 20px;
     padding-left: 20px;
     position: absolute;
-    font-family: 'Poppins', sans-serif;
+    font-family: Cascadia Code, Fira Code, Consolas, monospace;
     font-size: 15px;
     text-align: left
 }
@@ -235,13 +235,13 @@ header {
 span {
     font-size: 45px;
     font-weight: bold;
-    font-family: 'Poppins', sans-serif;
+    font-family: Cascadia Code, Fira Code, Consolas, monospace;
 }
 
 .copyright {
     font-size: 20px;
     font-weight: bold;
-    font-family: 'Poppins', sans-serif;
+    font-family: Cascadia Code, Fira Code, Consolas, monospace;
 
 }
 
@@ -545,7 +545,7 @@ h1 {
 /* Esttilo botones proyectos */
 .btn-view {
     justify-content: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Cascadia Code, Fira Code, Consolas, monospace;
     position: absolute;
     text-align: center;
     display: inline-flex;
@@ -566,7 +566,7 @@ h1 {
     color: white;
     padding: 15px 32px;
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Cascadia Code, Fira Code, Consolas, monospace;
     display: inline-block;
     font-size: 16px;
     margin: 120px 2px 10px 10px;
@@ -588,7 +588,7 @@ h1 {
     position: absolute;
     margin: 50px 120px 15px 260px;
     border-radius: 20px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Cascadia Code, Fira Code, Consolas, monospace;
     background-color: #000000;
     color: white;
     border: solid 3px #61003f;
@@ -607,7 +607,7 @@ h1 {
     width: 400px;
     height: 300px;
     background: #1e1e1e;
-    font-family: Menlo, Consolas, monospace;
+    font-family: Cascadia Code, Fira Code, Consolas, monospace;
     font-size: 14px;
     color: #e6e6e6;
     border-radius: 5px;
@@ -993,7 +993,7 @@ footer {
     font-size: 16px;
     border-radius: 4px;
     margin-top: 10px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:   Cascadia Code, Fira Code, Consolas, monospace;
 }
 
 .form-contacto textarea {
@@ -1001,7 +1001,7 @@ footer {
     padding: 10px;
     border: 1px solid #ccc;
     background-color: transparent;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Cascadia Code, Fira Code, Consolas, monospace;
     color: white;
     font-size: 16px;
     border-radius: 4px;
@@ -1076,9 +1076,7 @@ footer {
 
 @media screen and (max-width: 780px) {
 
-    * {
-        font-family: cursive;
-    }
+ 
 
     body {
         margin: 0 auto;
